<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">心声</string>
    <string name="click_to_talk">点此对我说话</string>
    <string name="click_to_read">朗读</string>
    <string name="appid">appid=51ce9dca</string>
    <string name="useful_expressions">常用语</string>
    <string name="settings">设置</string>
    <string name="default_text">主界面默认显示文字</string>
    <string name="default_text_value">你好，我是一位聋人，请点下面的按钮对我说话，谢谢!</string>
    <string name="expressions_actions">常用语操作</string>
    <string name="save_expression">保存</string>
    <string name="delete">删除</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_link">https://jinshuju.net/f/e14x0z</string>
    <string name="clear">清空</string>
    <string name="select_expression_button">常用语</string>
    <string name="voice_title">朗读语音</string>
    <string name="voice_summary">选择合适的语音来朗读文字</string>
    <string name="about_us">关于我们</string>
    <string name="exit_app">退出</string>
    <string name="about_us_intro">
        在Thoughtworks公司的3大支柱中，“社会与经济公正”是最有特色的一个。我们希望每个人都有平等的机会生活在这个世界上。所以，我们想用最擅长的方式（制作卓越的软件）来做点实在的事，而非让它只停留在口头说说。为聋人，我们做了“心声”，希望可以对大家的生活有帮助。
    </string>
    <string name="about_us_more">如果想了解我们的团队，或者捐助我们继续优化这款软件，可以查看http://xinsheng.im。</string>
    <string name="powered_by">Powered by Thoughtworks\n姜鹏、付莹、王琰、朱晨</string>
    <string name="thanks">同时感谢中国聋人网对我们的支持！</string>
</resources>
