<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

    <EditTextPreference
            android:key="default_text_preference"
            android:title="@string/default_text"
            android:defaultValue="@string/default_text_value"
            />

    <ListPreference android:title="@string/voice_title"
                    android:summary="@string/voice_summary"
                    android:key="default_voice_preference"
                    android:defaultValue="1"
                    android:entries="@array/voiceArray"
                    android:entryValues="@array/voiceValues"/>

    <PreferenceCategory>
        <Preference android:title="@string/about_us">
            <intent android:action="android.intent.action.VIEW"
                    android:targetPackage="com.HeartVoice"
                    android:targetClass="com.HeartVoice.AboutUsActivity" />
        </Preference>
        <Preference android:title="@string/feedback_title">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/feedback_link" />
        </Preference>
        <Preference android:title="@string/exit_app"
                    android:key="exitApp">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>