<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <EditText
            android:id="@+id/word"
            android:gravity="top"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="6"
            android:textSize="50dip"
            android:inputType="textMultiLine"
            />
    <LinearLayout android:id="@+id/content_actions"
                  android:layout_width="fill_parent"
                  android:layout_height="0dip"
                  android:layout_weight="1"
            >
        <Button android:id="@+id/clear_button"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:text="@string/clear"
                android:onClick="clear"
                />
        <Button android:id="@+id/select_expression_button"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:text="@string/select_expression_button"
                android:onClick="goToExpressionList"
                />
    </LinearLayout>
    <LinearLayout android:id="@+id/actions"
                  android:layout_width="fill_parent"
                  android:layout_height="0dip"
                  android:layout_weight="3"
            >
        <Button android:id="@+id/talk_button"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="7"
                android:text="@string/click_to_talk"
                />
        <Button android:id="@+id/read_button"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:text="@string/click_to_read"
                />
    </LinearLayout>
</LinearLayout>

